--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+
+        body {
+            min-height: 75rem;
+            padding-top: 4.5rem;
+            display: flex;
+            align-items: center;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            background-color: #f5f5f5;
+        }
+
+        main>.container {
+            padding: 60px 15px 0;
+        }
+
+        html,
+        body {
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>All Posts</h1>
-    {% for post in posts %}
-    <div>
-        <h2><a href="/blog/{{post.slug}}">{{post.title}}</a></h2>
-        <p>{{post.body | truncate(length=15)}}</p>
-    </div>
-    {% endfor %}
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Home</a>
+        </div>
+    </nav>
+    <main class="container">
+        <h1>All Posts</h1>
+        {% for post in posts %}
+        <div class="bg-light p-3 rounded">
+            <a class="h1" href="/blog/{{ post.slug }}">{{ post.title }}</a>
+            <p class="lead">{{ post.body | truncate(length=15) }}</p>
+        </div>
+        {% endfor %}
+    </main>
     <script src="https://getbootstrap.com/docs/5.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
